--- a/index.html
+++ b/index.html
@@ -89,68 +89,84 @@
             <h2>Recent Posts</h2>
             <div id="postsContainer">
                 <article class="text-samples">
-                    <h3>Text Content</h3>
-                    <p>Font Samples for Web Typography</p>
+                    <h3>Font Populer</h3>
+                    <p>Berikut disajikan 10 font populer beserta penjelasan dan contoh tampilan: </p>
                     
                     <div class="fonts-grid">
                         <div class="font-sample roboto">
                             <h4>Roboto</h4>
                             <img src="Font/roboto.jpg" alt="Roboto Font Preview" class="font-preview">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Elegant and modern sans-serif font.</p>
+                            <p>Font sans-serif modern dengan desain geometris yang seimbang; cocok untuk 
+                                antarmuka digital dan presentasi konten karena keterbacaannya dan nuansa 
+                                futuristiknya. </p>
                         </div>
 
                         <div class="font-sample opensans">
                             <h4>Open Sans</h4>
                             <img src="Font/opensans.jpg" alt="Open Sans Font Preview" class="font-preview">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Friendly and versatile typeface.</p>
+                            <p>Font ini menawarkan kesederhanaan dan kejelasan visual, banyak digunakan dalam 
+                                aplikasi web dan mobile. Desainnya yang bersih membuatnya ideal untuk konten 
+                                yang informatif.</p>
                         </div>
 
                         <div class="font-sample lato">
                             <h4>Lato</h4>
                             <img src="Font/lato.jpg" alt="Lato Font Preview" class="font-preview">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Clean and balanced design.</p>
+                            <p>Memiliki karakter yang hangat dan bersahabat, Lato sering digunakan untuk brand 
+                                corporate maupun media digital, dengan keseimbangan antara keformalitasan dan 
+                                kreativitas. </p>
                         </div>
 
                         <div class="font-sample montserrat">
                             <h4>Montserrat</h4>
                             <img src="Font/montserrat.jpg" alt="Montserrat Font Preview" class="font-preview">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Urban-inspired typeface.</p>
+                            <p>Terinspirasi dari tipografi urban, Montserrat menonjol dengan bentuk yang modern 
+                                dan berani, sehingga cocok digunakan untuk judul, logo, dan poster digital.</p>
                         </div>
 
                         <div class="font-sample raleway">
                             <h4>Raleway</h4>
                             <img src="Font/raleway.jpg" alt="Raleway Font Preview" class="font-preview">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Elegant display font.</p>
+                            <p>Sebuah font sans-serif elegan dengan garis tipis, ideal untuk desain minimalis dan 
+                                presentasi informasi yang estetik.</p>
                         </div>
 
                         <div class="font-sample merriweather">
                             <h4>Merriweather</h4>
                             <img src="Font/merriweather.jpg" alt="Merriweather Font Preview" class="font-preview">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Classic serif design.</p>
+                            <p>Font serif yang dirancang khusus untuk keterbacaan pada layar digital. Kombinasi 
+                                keanggunan dan kenyamanan membaca membuatnya populer dalam artikel dan 
+                                publikasi online. </p>
                         </div>
 
                         <div class="font-sample ptsans">
                             <h4>PT Sans</h4>
                             <img src="Font/ptsans.jpg" alt="PT Sans Font Preview" class="font-preview">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Universal and readable.</p>
+                            <p>Dengan desain yang bersih dan modern, PT Sans banyak digunakan di situs web 
+                                dan aplikasi, karena tampilannya yang netral dan profesional.</p>
                         </div>
 
                         <div class="font-sample sourcesanspro">
                             <h4>Source Sans Pro</h4>
                             <img src="Font/sourcesanspro.jpg" alt="Source Sans Pro Font Preview" class="font-preview">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Adobe's first open source font.</p>
+                            <p>Font open-source yang menawarkan fleksibilitas tinggi untuk berbagai aplikasi, 
+                                dari dokumen resmi hingga aplikasi digital, dengan fokus pada kejelasan dan 
+                                estetika.</p>
                         </div>
 
                         <div class="font-sample oswald">
                             <h4>Oswald</h4>
                             <img src="Font/oswald.jpg" alt="Oswald Font Preview" class="font-preview">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Condensed and bold.</p>
+                            <p>Mengadaptasi gaya tradisional sans-serif dengan sedikit sentuhan modern, Oswald 
+                                cocok untuk judul dan elemen desain yang ingin menonjolkan nuansa urban.</p>
                         </div>
 
                         <div class="font-sample ubuntu">
                             <h4>Ubuntu</h4>
                             <img src="Font/ubuntu.jpg" alt="Ubuntu Font Preview" class="font-preview">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Modern humanist style.</p>
+                            <p>Dirancang khusus untuk sistem operasi Ubuntu, font ini memberikan kesan modern 
+                                dan humanis, serta mendukung tampilan antarmuka yang ramah bagi pengguna 
+                                digital. </p>
                         </div>
                     </div>
 
@@ -158,72 +174,93 @@
                 </article>
 
                 <article class="text-samples">
-                    <h3>Image Content</h3>
-                    <p>Image File Format Samples</p>
+                    <h3>Format Gambar Populer</h3>
+                    <p>Berikut 10 format gambar beserta penjelasan dan spesifikasinya: </p>
                     
                     <div class="fonts-grid">
                         <div class="font-sample jpeg2000">
                             <h4>JPEG 2000</h4>
                             <img src="Images/jpeg.jpg" alt="JPEG 2000 Sample" class="font-preview">
-                            <p>Advanced image compression format with superior quality and scalability features. <a href="Images/jpeg.jpg" class="format-link">View JPEG file</a></p>
+                            <p>Format ini merupakan varian dari JPEG dengan algoritma kompresi canggih yang 
+                                mendukung opsi lossless. Ideal untuk gambar berkualitas tinggi dengan perincian 
+                                halus, JPEG 2000 mendukung resolusi tinggi dan skema kompresi dinamis. <a href="Images/jpeg.jpg" class="format-link">View JPEG file</a></p>
                         </div>
 
                         <div class="font-sample eps">
                             <h4>EPS Format</h4>
                             <img src="Images/jpeg.jpg" alt="EPS Sample" class="font-preview">
-                            <p>Vector-based format widely used in professional printing and graphic design. <a href="Images/eps.eps" class="format-link">View EPS file</a></p>
+                            <p>Format vektor ini digunakan terutama dalam keperluan desain cetak. EPS menjamin 
+                                skalabilitas tanpa kehilangan kualitas, sehingga cocok untuk logo dan ilustrasi yang 
+                                harus dicetak dalam berbagai ukuran. <a href="Images/eps.eps" class="format-link">View EPS file</a></p>
                         </div>
 
                         <div class="font-sample psd">
                             <h4>PSD Format</h4>
                             <img src="Images/jpeg.jpg" alt="PSD Sample" class="font-preview">
-                            <p>Adobe's native format supporting layers, masks, and advanced editing features. <a href="Images/psd.psd" class="format-link">View PSD file</a></p>
+                            <p>Format asli Adobe Photoshop ini menyimpan informasi lapisan, memungkinkan 
+                                pengeditan mendalam terhadap elemen gambar. PSD adalah standar dalam industri 
+                                desain grafis untuk pekerjaan yang membutuhkan fleksibilitas tinggi. <a href="Images/psd.psd" class="format-link">View PSD file</a></p>
                         </div>
 
                         <div class="font-sample cr2">
                             <h4>CR2 Format</h4>
                             <img src="Images/jpeg.jpg" alt="CR2 Sample" class="font-preview">
-                            <p>Canon's proprietary RAW format preserving maximum image data from sensors. <a href="Images/cr2.cr2" class="format-link">View CR2 file</a></p>
+                            <p>Format RAW dari Canon ini menyimpan data mentah sensor kamera, memberikan 
+                                kontrol penuh kepada fotografer dalam proses editing pasca-pengambilan gambar 
+                                dengan detail tinggi. <a href="Images/cr2.cr2" class="format-link">View CR2 file</a></p>
                         </div>
 
                         <div class="font-sample nef">
                             <h4>NEF Format</h4>
                             <img src="Images/jpeg.jpg" alt="NEF Sample" class="font-preview">
-                            <p>Nikon's RAW format offering comprehensive image data and editing flexibility. <a href="Images/nef.nef" class="format-link">View NEF file</a></p>
+                            <p>Sama seperti CR2 untuk Canon, NEF adalah format RAW buatan Nikon yang 
+                                memungkinkan pengolahan foto secara profesional dengan penyimpanan data asli 
+                                tanpa kompresi berlebihan.  <a href="Images/nef.nef" class="format-link">View NEF file</a></p>
                         </div>
 
                         <div class="font-sample orf">
                             <h4>ORF Format</h4>
                             <img src="Images/jpeg.jpg" alt="ORF Sample" class="font-preview">
-                            <p>Olympus RAW format delivering high-quality uncompressed image data. <a href="Images/orf.orf" class="format-link">View ORF file</a></p>
+                            <p>Format RAW dari Olympus ini mendukung penyimpanan informasi gambar secara 
+                                utuh, memberikan fleksibilitas tinggi bagi fotografer dalam mengatur exposure dan 
+                                kontras secara pasca-produksi. <a href="Images/orf.orf" class="format-link">View ORF file</a></p>
                         </div>
 
                         <div class="font-sample dng">
                             <h4>DNG Format</h4>
                             <img src="Images/jpeg.jpg" alt="DNG Sample" class="font-preview">
-                            <p>Adobe's universal RAW format ensuring long-term compatibility and preservation. <a href="Images/dng.dng" class="format-link">View DNG file</a></p>
+                            <p>Merupakan format RAW standar terbuka yang mendukung interoperabilitas antar 
+                                perangkat, DNG dirancang untuk menyimpan data gambar mentah dengan 
+                                kompatibilitas lintas platform yang baik. <a href="Images/dng.dng" class="format-link">View DNG file</a></p>
                         </div>
 
                         <div class="font-sample pcx">
                             <h4>PCX Format</h4>
                             <img src="Images/jpeg.jpg" alt="PCX Sample" class="font-preview">
-                            <p>Classic image format known for its early adoption in PC graphics. <a href="Images/pcx.pcx" class="format-link">View PCX file</a></p>
+                            <p>Format raster yang pernah populer di era awal komputer, PCX memiliki struktur 
+                                data sederhana. Meskipun jarang digunakan untuk aplikasi profesional saat ini, 
+                                format ini memiliki nilai historis dalam dunia grafis digital. <a href="Images/pcx.pcx" class="format-link">View PCX file</a></p>
                         </div>
 
                         <div class="font-sample openexr">
                             <h4>OpenEXR</h4>
                             <img src="Images/jpeg.jpg" alt="OpenEXR Sample" class="font-preview">
-                            <p>High dynamic range imaging format used in professional visual effects. <a href="Images/exr.exr" class="format-link">View OPEN EXR file</a></p>
+                            <p>Dikembangkan oleh Industrial Light & Magic, OpenEXR adalah format gambar 
+                                high-dynamic-range (HDR) yang mendukung rentang warna luas dan detail 
+                                pencahayaan, banyak digunakan dalam industri film dan efek visual. <a href="Images/exr.exr" class="format-link">View OPEN EXR file</a></p>
                         </div>
 
                         <div class="font-sample hdr">
                             <h4>Radiance HDR</h4>
                             <img src="Images/jpeg.jpg" alt="Radiance HDR Sample" class="font-preview">
-                            <p>Scientific visualization format supporting high dynamic range imaging. <a href="Images/hdr.hdr" class="format-link">View HDR file</a></p>
+                            <p>Format ini dirancang khusus untuk menyimpan gambar dengan rentang dinamis 
+                                tinggi, memungkinkan reproduksi cahaya dan bayangan dengan sangat detail. Sangat 
+                                efektif untuk aplikasi pencahayaan dan render digital. 
+                                 <a href="Images/hdr.hdr" class="format-link">View HDR file</a></p>
                         </div>
                     </div>
 
-                    <small>Posted on: April 18, 2025</small>
+                    <small>Posted on: April 17, 2025</small>
                 </article>
 
                 <article>
