--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
                         <div class="font-sample opensans">
                             <h4>Open Sans</h4>
-                            <img src="Font/opensans.jpg" alt="Open Sans Font Preview" class="font-preview">
+                            <img src="Font/openSans.jpg" alt="Open Sans Font Preview" class="font-preview">
                             <p>Font ini menawarkan kesederhanaan dan kejelasan visual, banyak digunakan dalam 
                                 aplikasi web dan mobile. Desainnya yang bersih membuatnya ideal untuk konten 
                                 yang informatif.</p>
@@ -141,14 +141,14 @@
 
                         <div class="font-sample ptsans">
                             <h4>PT Sans</h4>
-                            <img src="Font/ptsans.jpg" alt="PT Sans Font Preview" class="font-preview">
+                            <img src="Font/ptSans.jpg" alt="PT Sans Font Preview" class="font-preview">
                             <p>Dengan desain yang bersih dan modern, PT Sans banyak digunakan di situs web 
                                 dan aplikasi, karena tampilannya yang netral dan profesional.</p>
                         </div>
 
                         <div class="font-sample sourcesanspro">
                             <h4>Source Sans Pro</h4>
-                            <img src="Font/sourcesanspro.jpg" alt="Source Sans Pro Font Preview" class="font-preview">
+                            <img src="Font/sourceSansPro.jpg" alt="Source Sans Pro Font Preview" class="font-preview">
                             <p>Font open-source yang menawarkan fleksibilitas tinggi untuk berbagai aplikasi, 
                                 dari dokumen resmi hingga aplikasi digital, dengan fokus pada kejelasan dan 
                                 estetika.</p>
