--- a/index.html
+++ b/index.html
@@ -271,111 +271,120 @@
                         <div class="font-sample amr">
                             <h4>AMR Format</h4>
                             <audio controls class="audio-preview">
-                                <source src="Audio/sample.amr" type="audio/amr">
+                                <source src="Audio/tanahAirku.mp3" type="audio/mpeg">
                                 Your browser does not support the audio element.
                             </audio>
-                            <p>Format audio optimized untuk rekaman suara dengan bitrate rendah, umumnya 
-                                digunakan dalam komunikasi seluler dan pesan suara. Ideal untuk penyimpanan 
-                                efisien dari rekaman vokal. <a href="Audio/tanahAirku.mp3" class="format-link">Download AMR</a></p>
+                            <p>Dirancang khusus untuk komunikasi suara pada perangkat mobile, AMR 
+                                menyajikan kompresi optimal dengan bitrate rendah (sekitar 4,75–12,2 kbps) dan 
+                                frekuensi sampling 8 kHz, sehingga ideal untuk rekaman percakapan.
+                               <a href="Audio/original.amr" class="format-link">Download AMR Version</a></p>
                         </div>
 
                         <div class="font-sample ac3">
                             <h4>AC-3 Format</h4>
                             <audio controls class="audio-preview">
-                                <source src="Audio/sample.ac3" type="audio/ac3">
+                                <source src="Audio/tanahAirku.mp3" type="audio/mpeg">
                                 Your browser does not support the audio element.
                             </audio>
-                            <p>Dolby Digital audio format yang mendukung surround sound hingga 5.1 channel.
-                                Standar industri untuk konten film dan broadcast dengan kompresi audio
-                                berkualitas tinggi. <a href="Audio/sample.ac3" class="format-link">Download AC-3</a></p>
+                            <p>Format ini umum digunakan dalam sinema dan DVD, mendukung audio 
+                                multichannel (5.1 channel) dengan bitrate variabel untuk menghadirkan 
+                                pengalaman sinematik yang imersif.
+                               <a href="Audio/original.ac3" class="format-link">Download AC-3 Version</a></p>
                         </div>
 
                         <div class="font-sample atrac3">
                             <h4>ATRAC3 Format</h4>
                             <audio controls class="audio-preview">
-                                <source src="Audio/sample.at3" type="audio/atrac3">
+                                <source src="Audio/tanahAirku.mp3" type="audio/mpeg">
                                 Your browser does not support the audio element.
                             </audio>
-                            <p>Format kompresi audio yang dikembangkan Sony, menawarkan kualitas tinggi
-                                dengan ukuran file yang efisien. Populer dalam perangkat portable Sony dan
-                                PlayStation. <a href="Audio/sample.at3" class="format-link">Download ATRAC3</a></p>
+                            <p>Diciptakan oleh Sony, ATRAC3 menawarkan kualitas audio yang baik pada ukuran 
+                                file yang lebih kecil melalui teknik kompresi yang canggih, banyak digunakan 
+                                dalam perangkat pemutar musik digital. <a href="Audio/original.at3" class="format-link">Download ATRAC3 Version</a></p>
                         </div>
 
                         <div class="font-sample mp2">
                             <h4>MP2 Format</h4>
                             <audio controls class="audio-preview">
-                                <source src="Audio/sample.mp2" type="audio/mpeg">
+                                <source src="Audio/tanahAirku.mp3" type="audio/mpeg">
                                 Your browser does not support the audio element.
                             </audio>
-                            <p>Pendahulu MP3, masih digunakan dalam broadcasting digital dan DVD. Menawarkan
-                                kompresi yang baik untuk aplikasi profesional dengan bitrate tinggi.
-                                <a href="Audio/sample.mp2" class="format-link">Download MP2</a></p>
+                            <p>Sering dipakai dalam penyiaran radio digital, MP2 menawarkan kompresi yang 
+                                stabil dan efisiensi tinggi dalam distribusi audio, meskipun kini telah digantikan 
+                                oleh format yang lebih baru di beberapa aplikasi.
+                                <a href="Audio/original.mp2" class="format-link">Download MP2 Version</a></p>
                         </div>
 
                         <div class="font-sample pcm">
                             <h4>PCM Format</h4>
                             <audio controls class="audio-preview">
-                                <source src="Audio/sample.pcm" type="audio/pcm">
+                                <source src="Audio/tanahAirku.mp3" type="audio/mpeg">
                                 Your browser does not support the audio element.
                             </audio>
-                            <p>Format audio mentah tanpa kompresi, memberikan kualitas maksimal dengan ukuran
-                                file besar. Standar untuk audio CD dan rekaman studio profesional.
-                                <a href="Audio/sample.pcm" class="format-link">Download PCM</a></p>
+                            <p>Merupakan format audio mentah tanpa kompresi, PCM menyajikan data digital 
+                                yang identik dengan sinyal analog asli, seperti yang digunakan dalam sistem CD 
+                                audio (biasanya 16-bit, 44,1 kHz).
+                                <a href="Audio/original.pcm" class="format-link">Download PCM Version</a></p>
                         </div>
 
                         <div class="font-sample realaudio">
                             <h4>RealAudio Format</h4>
                             <audio controls class="audio-preview">
-                                <source src="Audio/sample.ra" type="audio/vnd.rn-realaudio">
+                                <source src="Audio/tanahAirku.mp3" type="audio/mpeg">
                                 Your browser does not support the audio element.
                             </audio>
-                            <p>Format streaming audio pionir untuk internet. Mengutamakan efisiensi bandwidth
-                                dengan tetap mempertahankan kualitas suara yang dapat diterima.
-                                <a href="Audio/sample.ra" class="format-link">Download RealAudio</a></p>
+                            <p>Format ini dioptimalkan untuk streaming audio melalui internet dengan adaptasi 
+                                bitrate sesuai kondisi jaringan, memungkinkan pemutaran berjalan meski dalam 
+                                kondisi bandwidth yang terbatas.
+                                <a href="Audio/original.ra" class="format-link">Download RealAudio Version</a></p>
                         </div>
 
                         <div class="font-sample dts">
                             <h4>DTS Format</h4>
                             <audio controls class="audio-preview">
-                                <source src="Audio/sample.dts" type="audio/dts">
+                                <source src="Audio/tanahAirku.mp3" type="audio/mpeg">
                                 Your browser does not support the audio element.
                             </audio>
-                            <p>Format audio multichannel high-end yang menawarkan kualitas suara superior
-                                untuk home theater dan distribusi film. Mendukung hingga 7.1 channel.
-                                <a href="Audio/sample.dts" class="format-link">Download DTS</a></p>
+                            <p>DTS mendukung audio surround berkualitas tinggi dan sering diaplikasikan dalam 
+                                sistem home theater serta pemutaran film di bioskop, menawarkan opsi channel 
+                                yang luas dan kualitas dinamis. 
+                                <a href="Audio/original.dts" class="format-link">Download DTS Version</a></p>
                         </div>
 
                         <div class="font-sample wavpack">
                             <h4>WavPack Format</h4>
                             <audio controls class="audio-preview">
-                                <source src="Audio/sample.wv" type="audio/wavpack">
+                                <source src="Audio/tanahAirku.mp3" type="audio/mpeg">
                                 Your browser does not support the audio element.
                             </audio>
-                            <p>Format kompresi hybrid yang menawarkan opsi lossless dan lossy. Ideal untuk
-                                pengarsipan audio dengan rasio kompresi yang baik.
-                                <a href="Audio/sample.wv" class="format-link">Download WavPack</a></p>
+                            <p>WavPack adalah format audio hybrid lossless yang menyediakan opsi kompresi 
+                                lossless sekaligus mode lossy, sehingga memungkinkan penyeimbangan antara 
+                                kualitas dan ukuran file. 
+                                <a href="Audio/original.wv" class="format-link">Download WavPack Version</a></p>
                         </div>
 
                         <div class="font-sample ape">
                             <h4>Monkey's Audio</h4>
                             <audio controls class="audio-preview">
-                                <source src="Audio/sample.ape" type="audio/ape">
+                                <source src="Audio/tanahAirku.mp3" type="audio/mpeg">
                                 Your browser does not support the audio element.
                             </audio>
-                            <p>Format kompresi lossless dengan rasio kompresi tinggi. Populer di kalangan
-                                audiophile untuk penyimpanan musik berkualitas tinggi.
-                                <a href="Audio/sample.ape" class="format-link">Download APE</a></p>
+                            <p>Format lossless ini dirancang untuk mengompresi audio tanpa kehilangan kualitas, 
+                                cocok untuk pengarsipan musik, meskipun dukungannya masih terbatas pada 
+                                beberapa perangkat pemutar.
+                                <a href="Audio/original.ape" class="format-link">Download APE Version</a></p>
                         </div>
 
                         <div class="font-sample mpc">
                             <h4>Musepack</h4>
                             <audio controls class="audio-preview">
-                                <source src="Audio/sample.mpc" type="audio/musepack">
+                                <source src="Audio/tanahAirku.mp3" type="audio/mpeg">
                                 Your browser does not support the audio element.
                             </audio>
-                            <p>Format kompresi audio yang dioptimalkan untuk kualitas tinggi pada bitrate
-                                menengah. Menawarkan transparansi yang baik untuk musik.
-                                <a href="Audio/sample.mpc" class="format-link">Download MPC</a></p>
+                            <p>Musepack mengoptimalkan kompresi audio dengan menjaga kualitas tinggi pada 
+                                bitrate yang rendah, menjadikannya populer di kalangan penggemar musik dan 
+                                layanan streaming tertentu.
+                                <a href="Audio/original.mpc" class="format-link">Download MPC Version</a></p>
                         </div>
                     </div>
 
